处理头像变形问题

--- a/wechat/src/main/webapp/xcview/html/all_user_comment.html
+++ b/wechat/src/main/webapp/xcview/html/all_user_comment.html
@@ -95,7 +95,7 @@
 			<div class="wrap_comment_text">
 				<!--头像-->
 				<div class="user_header">
-					<img src="{{item.onlineUser.smallHeadPhoto}}" onerror="nofinds();"/>
+					<img src="{{item.onlineUser.smallHeadPhoto}}?imageMogr2/thumbnail/!98x98r|imageMogr2/gravity/Center/crop/98x98" onerror="nofinds();"/>
 				</div>
 				<!--右边评价-->
 				<div class="user_text">
