--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -219,7 +219,8 @@
                     {{/if}}
 
 
-                                       	<img src="{{item.headPortrait}}?imageView2/2/w/72" />
+                                       	<!--<img src="{{item.headPortrait}}?imageView2/2/w/72" />-->
+                                       	<img src="{{item.headPortrait}}?imageMogr2/thumbnail/!100x100r|imageMogr2/gravity/Center/crop/100x100" />
                     						<span style="font-size: 0.22rem;">{{item.name}}</span>
                     					</a>
                     				</div>
