--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1178,7 +1178,7 @@
 					<div class="QA_solution">
 						<div class="QA_solution_main">
 							<!--<img src="/xcview/images/QA_solution..png" alt="" class="QA_solution_main_img" />-->
-							<span><img src="{{item.doctorImg}}" alt="" class="QA_solution_img" onerror="nofind()" />医师解答：</span>
+							<span><img src="{{item.doctorImg}}?imageMogr2/thumbnail/!40x40r|imageMogr2/gravity/Center/crop/40x40" alt="" class="QA_solution_img" onerror="nofind()" />医师解答：</span>
 							{{if item.answer == null || item.answer == ''}}
 								<span>暂未回答该问题</span>
 							{{else}}
