--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -156,7 +156,7 @@
                                onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
                     {{/if}}
     
-                <li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+                <li><img src="{{headImg}}?imageMogr2/thumbnail/!60x60r|imageMogr2/gravity/Center/crop/60x60" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
 				<li style="margin-top: 0.18rem;float:right;">
 					<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 					<a href="javascript: ;">
