--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -79,7 +79,7 @@
 	<div class="personal_bg" id="personal_bg">
 		<script type="text/html" id="personal_header">
 			<div class="personal_header">
-				<img src="{{lecturerInfo.small_head_photo}}" onerror="nofind();"/>
+				<img src="{{lecturerInfo.small_head_photo}}?imageMogr2/thumbnail/!120x120r|imageMogr2/gravity/Center/crop/120x120" onerror="nofind();"/>
 			</div>
 			<!--主播名字/粉丝数量-->
 			<div class="wrap_wrapPersonal">
@@ -306,7 +306,7 @@
 					<div class="wrap_comment_text">
 						<!--头像-->
 						<div class="user_header">
-							<img src="{{item.onlineUser.smallHeadPhoto}}" onerror="nofinds();"/>
+							<img src="{{item.onlineUser.smallHeadPhoto}}?imageMogr2/thumbnail/!98x98r|imageMogr2/gravity/Center/crop/98x98" onerror="nofinds();"/>
 						</div>
 						<!--右边评价-->
 						<div class="user_text">
