--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -214,7 +214,7 @@
 				<div class="wrap_comment_text">
 					<!--头像-->
 					<div class="user_header">
-						<img src="{{item.onlineUser.smallHeadPhoto}}"/>
+						<img src="{{item.onlineUser.smallHeadPhoto}}?imageMogr2/thumbnail/!98x98r|imageMogr2/gravity/Center/crop/98x98"/>
 					</div>
 					<!--右边评价-->
 					<div class="user_text">
