--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -162,7 +162,7 @@
 			<div class="batch_main" data-ids="{{item.id}}" data-doctorType="{{item.doctorType}}" data-userId="{{item.userId}}">
 				<div class="batch_main_bg">
 					<div class="batch_main_img">
-						<img src="{{item.headPortrait}}" alt="" onerror="nofind();" />
+						<img src="{{item.headPortrait}}?imageMogr2/thumbnail/!100x100r|imageMogr2/gravity/Center/crop/100x100" alt="" onerror="nofind();" />
 					</div>
 					<div class="name">{{item.name}}</div>
 					<div class="center">{{item.title}}</div>
@@ -207,7 +207,7 @@
 					{{each item.doctors as item i}}   
 					<div class="physician_cen" data-id="{{item.id}}" data-doctorType="{{item.doctorType}}" data-userId="{{item.userId}}">
 						<div class="head_portrait">
-							<img src="{{item.headPortrait}}" alt="" onerror="nofind();"  />
+							<img src="{{item.headPortrait}}?imageMogr2/thumbnail/!120x120r|imageMogr2/gravity/Center/crop/120x120" alt="" onerror="nofind();"  />
 						</div>
 						<div class="referral">
 							<div class="referral_title">
