--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -425,7 +425,10 @@
     	max-height: 10.26rem;
 	}
 	.itransforms_li img{
-		transform: scale(1.2,1.3);
+		/*transform: scale(1.2,1.3);*/
+	}
+	.pic_img_one{
+		max-width: 0.45rem !important;
 	}
 </style>
 
@@ -573,7 +576,7 @@
 						<div class="paper_nav_cen comment_hide">
 							<ul data-am-widget="gallery" class="am-gallery am-avg-sm-2 am-avg-md-3 am-avg-lg-4 am-gallery-overlay" data-am-gallery="{ pureview: true }" >
 								{{each item.imgStr as pic }}
-								<li  class="itransform_{{item.id}} itransforms itransforms_li">
+								<li  class="itransform_{{item.id}} itransforms itransforms_li" style="margin-left: 0.28rem;">
 									<div class="am-gallery-item" data-itransform="{{item.id}}">
 										<a href="{{pic.imgUrl}}?imageView2/2/h/226" class="transform_a_img">
 											<!--<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />-->
