直播间--文档添加背景图

--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -64,11 +64,17 @@
 	/*隱藏后結束*/
 
 	/*修改變動后的代碼--微吼云開始*/
+	
 	.doc-img{
 		/*background: rosybrown;*/
 		/*background: #000;*/
 		background: rgb(68, 68, 68);
 		margin-top: 0;
+	}
+	.doc{
+		background: url(/web/images/book.png) no-repeat rgb(68, 68, 68) !important;
+		background-size: 96px 82px !important;
+		background-position: center center !important; 
 	}
 	.doc-img div{
 		width: 294px !important;
@@ -312,6 +318,7 @@
         /*border: 1px solid black;*/
         position: relative;
         /*background: red;*/
+        /*background: rgb(68, 68, 68);*/
     }
     .wrapper{
         overflow: hidden;
@@ -395,6 +402,7 @@
 	    text-align: center;
 	    margin-top: 56px;
 	}
+	
 </style>
 </head>
 
