--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2611,15 +2611,30 @@
 	    var seperator2 = ":";
 	    var month = date.getMonth() + 1;
 	    var strDate = date.getDate();
+	    var strHours = date.getHours();
+    	var strMinutes = date.getMinutes();
+    	var strSeconds = date.getSeconds();
 	    if (month >= 1 && month <= 9) {
 	        month = "0" + month;
 	    }
 	    if (strDate >= 0 && strDate <= 9) {
 	        strDate = "0" + strDate;
 	    }
+	    //  时
+	    if (strHours >= 0 && strHours <= 9) {
+	        strHours = "0" + strHours;
+	    }
+	//  分
+	     if (strMinutes >= 0 && strMinutes <= 9) {
+	        strMinutes = "0" + strMinutes;
+	    }
+	//  秒
+	    if (strSeconds >= 0 && strSeconds <= 9) {
+	        strSeconds = "0" + strSeconds;
+	    }
 	    var currentdate = date.getFullYear() + seperator1 + month + seperator1 + strDate
-	            + " " + date.getHours() + seperator2 + date.getMinutes()
-	            + seperator2 + date.getSeconds();
+	            + " " + strHours + seperator2 + strMinutes
+	            + seperator2 + strSeconds;
 	    return currentdate;    
 	}
 	</script>
