pc直播间--直播提示修改。。h5我的添加远程诊疗，测试修改ios点击视频全屏问题（未解决）

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -27,6 +27,15 @@
 	    }
 	}	
 </script>
+<style>
+	.my_order{
+		width: 7.5rem;
+	    height: 0.98rem;
+	    background: #fff;
+	    margin: 0 auto;
+	    margin-top: 0.2rem;
+	}
+</style>
 </head>
 <!--公用-->
 <!--y-float:right;  z-float:left;  both-clear:both;-->
@@ -98,6 +107,14 @@
 		<div class="anchor_main">
 			<img src="../images/my_anchor.png" class="img0 z" />
 			我要当主播
+			<img src="../images/account05.png" class="img1 y" />
+		</div>
+	</div>
+
+	<div class="my_order">
+		<div class="anchor_main">
+			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
+			我的预约
 			<img src="../images/account05.png" class="img1 y" />
 		</div>
 	</div>
