主播工作台图片显示

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -106,7 +106,7 @@
 	{{each records as course i}}
 	<tr>
 		<td>
-			<img src="{{course.imgPath}}" alt="" />
+			<img src="{{course.imgPath}}?imageMogr2/thumbnail/!106x60r|imageMogr2/gravity/Center/crop/106x60" alt="" />
 		</td>
 		<td>
 			{{course.title}}
@@ -188,7 +188,7 @@
 	{{each records as course i}}
 	<tr>
 		<td>
-			<img src="{{course.imgPath}}" alt="" />
+			<img src="{{course.imgPath}}?imageMogr2/thumbnail/!106x60r|imageMogr2/gravity/Center/crop/106x60" alt="" />
 		</td>
 		<td>
 			{{course.title}}
@@ -248,7 +248,7 @@
 	{{each records as collection i}}
 	<tr>
 		<td>
-			<img src="{{collection.imgPath}}" alt="" />
+			<img src="{{collection.imgPath}}?imageMogr2/thumbnail/!106x60r|imageMogr2/gravity/Center/crop/106x60" alt="" />
 		</td>
 		<td>
 			{{collection.title}}
