医师动态封面和轮播图封面上传

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2571,7 +2571,8 @@
 		        format: "YYYY-MM-DD hh:mm"
 		   });
 		   $("#end-time").jeDate({
-		        format: "YYYY-MM-DD hh:mm"
+		        format: "YYYY-MM-DD hh:mm",
+		        minDate:getNowFormatDate()
 		   });
 //			报名截止时间
  			$("#sign-up-time").jeDate({
