--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -42,6 +42,9 @@
 	.ccH5playerBox{
 	    height: 4.24rem !important;
 	}
+	.ccH5sp{
+		display: none !important;
+	}
 </style>
 <style type="text/css">
 	.ccH5playerBox section{
