修改--购买成功返回学堂，专辑大纲图片修改。医师简介--图片修改

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -120,6 +120,7 @@
 									<div class="apprentice_main">
 										<div class="flat_patternmaking">
 											<div>
+												<!--<img src="{{item.coverImg}}?imageMogr2/thumbnail/!698x396r|imageMogr2/gravity/Center/crop/698x396" alt="封面" />-->
 												<img src="{{item.coverImg}}?imageMogr2/thumbnail/!698x396r|imageMogr2/gravity/Center/crop/698x396" alt="封面" />
 											</div>
 										</div>
