--- a/wechat/src/main/webapp/xcview/html/buy_prosperity.html
+++ b/wechat/src/main/webapp/xcview/html/buy_prosperity.html
@@ -187,7 +187,7 @@
 			</div>
 			<div class="prosperity_border"></div>
 			<div class="check_one">查看已购课程，请前往<span>学习中心</span></div>
-			<div class="check_two">继续寻找感兴趣的课程，请前往<span>学堂</span></div>
+			<div class="check_two">继续寻找感兴趣的课程，请前往<span onclick="location.href ='/xcview/html/home_page.html'">学堂</span></div>
 		</div>
 
 		<div class="hint" style="display:none;">
