语音直播和开启语音直播入口

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2473,21 +2473,21 @@
 		<div class="teacher_picUpdata">
 			<span> 医师资格证</span>
 			<span class="teacher_pic" style="cursor: default;">
-				<img src={{qualificationCertificate}} alt="" />
+				<img src="{{qualificationCertificate}}" alt="" />
 			</span>
 		</div>
 
 		<div class="zhiye_picUpdata">
 			<span>执业资格证</span>
 			<span class="zhiye_pic" style="cursor: default;">
-				<img src={{professionalCertificate}} alt="" />
+				<img src="{{professionalCertificate}}" alt="" />
 			</span>
 		</div>
 
 		<div class="touxiang_picUpdata">
 			<span> 真实头像</span>
 			<span class="touxiang_pic" style="cursor: default;">
-					<img src={{headPortrait}} alt="" onerror="this.src='/web/images/reset_head.png';" />
+					<img src="{{headPortrait}}?imageMogr2/thumbnail/!120x120r|imageMogr2/gravity/Center/crop/120x120" alt="" onerror="this.src='/web/images/reset_head.png';" />
 			</span>
 		</div>
 
