直播间--视频，音频课程添加头像截取。已购课，隐藏背景图

--- a/wechat/src/main/webapp/xcview/html/school_play.html
+++ b/wechat/src/main/webapp/xcview/html/school_play.html
@@ -114,7 +114,7 @@
                                onclick="window.location='live_personal.html?userLecturerId={{userLecturerId}}'">
                     {{/if}}             
 
-                    <li style='height: 0.6rem;'><img src="{{headImg}}" style='width:0.6rem;height:0.6rem;border-radius: 60px;'/><span style='margin-top: 0.15rem;'>{{heir}}</span></li>
+                    <li style='height: 0.6rem;'><img src="{{headImg}}?imageMogr2/thumbnail/!60x60r|imageMogr2/gravity/Center/crop/60x60" style='width:0.6rem;height:0.6rem;border-radius: 60px;'/><span style='margin-top: 0.15rem;'>{{heir}}</span></li>
 					<li style='float: right;margin-top: 0.15rem;'>
 						<!--<a href="live_personal.html?userLecturerId={{userLecturerId}}">-->
 						<a href="javascript: ;">
