--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -190,7 +190,7 @@
                 
                     
 
-                <li><img src="{{headImg}}" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
+                <li><img src="{{headImg}}?imageMogr2/thumbnail/!60x60r|imageMogr2/gravity/Center/crop/60x60" style="width:0.6rem;height:0.6rem;border-radius: 60px;"/><span style="margin-top: 0.15rem;">{{heir}}</span></li>
 				<li>
 					<a href="javascript: ;">
 						<img src="../images/video_review.png" style="width: 0.15rem; height: 0.25rem; margin-right: 0rem;margin-top: 0.15rem;"  />
