直播间--手机端-远程修改添加直播间

--- a/wechat/src/main/webapp/xcview/html/curriculum_table.html
+++ b/wechat/src/main/webapp/xcview/html/curriculum_table.html
@@ -107,17 +107,22 @@ window.onload = function(){
 }
 .no_class{
 	/*margin-top: -6.5rem;*/
-
-	        position: fixed;
-	        top: 50%;
-	        left: 50%;
-	        margin-top: -8rem;
-	        z-index: -1;
-	        width: 5rem;
-	        height: 3.5rem;
-	        /*background: red;*/
-	        margin-top: -0.5rem;
-	        margin-left: -2.5rem; 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -8rem;
+    z-index: -1;
+    width: 5rem;
+    height: 3.5rem;
+    /*background: red;*/
+    margin-top: -0.5rem;
+    margin-left: -2.5rem; 
+}
+.li_list span{
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
 }
 </style>
 </head>
