中医师主页--头像修改。。中医师页面头像修改。弟子头像修改

--- a/wechat/src/main/webapp/demo/img-prod-fix/html/physician/index.html
+++ b/wechat/src/main/webapp/demo/img-prod-fix/html/physician/index.html
@@ -203,7 +203,7 @@
 					{{each item.doctors as item i}}   
 					<div class="physician_cen" data-id="{{item.id}}">
 						<div class="head_portrait">
-							<img src="{{item.headPortrait}}" alt="" onerror="nofind();"  />
+							<img src="{{item.headPortrait}}?imageMogr2/thumbnail/!120x120r|imageMogr2/gravity/Center/crop/120x120" alt="" onerror="nofind();"  />
 						</div>
 						<div class="referral">
 							<div class="referral_title">
