--- a/wechat/src/main/webapp/demo/img-prod-fix/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/demo/img-prod-fix/html/physician/physicians_page.html
@@ -462,7 +462,7 @@
 		<!-- 主播信息开始 -->
 		<div class="referral">
 			<div class="head_portrait">
-				<img src="{{items.lecturerInfo.small_head_photo}}" alt="" onerror="nofind();" />
+				<img src="{{items.lecturerInfo.small_head_photo}}?imageMogr2/thumbnail/!140x140r|imageMogr2/gravity/Center/crop/140x140" alt="" onerror="nofind();" />
 			</div>
 			<div class="message">
 				<div class="message_name">
@@ -1157,7 +1157,7 @@
 	            <div class="disciple_main_id">
 	            	<script type="text/html" id="disciple_main_id">
 					{{each items as item i}} 
-						<img src="{{item}}" alt="" class="disciple_main_apprentices" />
+						<img src="{{item}}?imageMogr2/thumbnail/!80x80r|imageMogr2/gravity/Center/crop/80x80" alt="" class="disciple_main_apprentices" />
 					{{/each}}
 		            </script>
 	            </div>
