修改课程详情

--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -274,27 +274,27 @@
 		});
 
 		// 点击发送--还原输入区域
-		$(".transmit").click(function(){
-			var commentArea = $(".comment_area").css("display");  /*獲取全部評論顯示隱藏*/
+		/*$(".transmit").click(function(){
+			var commentArea = $(".comment_area").css("display");  /!*獲取全部評論顯示隱藏*!/
 			if (commentArea == "block") {
 				$(".footer_bg").hide();
 			}else{
 				sendMsgBtn();   //点击发送方法
 				// alert(22);
 				// 全部评论隱藏--點擊發送
-				$(".barrage_switch").hide();  /*弹幕隐藏*/
-				$(".chat_all").hide();      /*查看更多评论隐藏*/
-				$(".chat").removeClass("chats");  /*增加input长度*/
+				$(".barrage_switch").hide();  /!*弹幕隐藏*!/
+				$(".chat_all").hide();      /!*查看更多评论隐藏*!/
+				$(".chat").removeClass("chats");  /!*增加input长度*!/
 				$(".chat_put").removeClass("chat_puts");
-				$(".transmit").hide();   /*发送按钮*/
-				$(".footer_bg").hide();  /*整屏按钮*/
-				$(".barrage_switch").show();  /*弹幕*/
-				$(".chat_all").show();      /*查看更多评论*/
+				$(".transmit").hide();   /!*发送按钮*!/
+				$(".footer_bg").hide();  /!*整屏按钮*!/
+				$(".barrage_switch").show();  /!*弹幕*!/
+				$(".chat_all").show();      /!*查看更多评论*!/
 			};
 
-		});
+		});*/
 
-		init();  /*默認方法--可用于判斷是否回放*/
+		//init();  /*默認方法--可用于判斷是否回放*/
 		// 弹幕开始
 		var data = ['你好世界','世界你好','啊啊啊哈哈哈哈'];  //定義最後3條
 		var SixHide = 0;
