--- a/wechat/src/main/webapp/demo/hudongZc.html
+++ b/wechat/src/main/webapp/demo/hudongZc.html
@@ -142,12 +142,13 @@
     </style>
   </head>
 
+
   <body>
 
     <div class="inputs">
-      <input id="appId" type="text" name="appId" value="0cf4bbe0" placeholder="这里填写appId">
-      <input id="inavId" type="text" name="inavId" value="inav_b28b7f99" placeholder="这里填写互动房间ID">
-      <input id="token" type="text" name="token" value="" placeholder="token">
+      <input id="appId" type="text" name="appId" value="fbc17706" placeholder="这里填写appId">
+      <input id="inavId" type="text" name="inavId" value="inav_c7275f5a" placeholder="这里填写互动房间ID">
+      <input id="token" type="text" name="token" value="access:fbc17706:d6cb9d92b6f5e65a" placeholder="token">
       <input onclick="init()" type="button"  value="开始互动">
     </div>
     <div id="my-interaction" style="margin: 0 auto;border: 1px solid #d2d2d2;margin-top:20px;"></div>
@@ -261,8 +262,8 @@
       window.onload = function () {
 
           if(window.location.href.indexOf('vhallyun.com') == -1){
-            $('#appId').val('277ed4af');
-            $('#inavId').val('inav_ce045de2');
+            $('#appId').val('fbc17706');
+            $('#inavId').val('inav_c7275f5a');
           }
 
       }
