完善远程诊疗的逻辑问题bug

--- a/wechat/src/main/webapp/demo/hudongZc.html
+++ b/wechat/src/main/webapp/demo/hudongZc.html
@@ -568,7 +568,7 @@
          */
           Vhall.config({
             appId : $('#appId').val(),//应用 ID ,必填
-            accountId :'7443e548ba1b4183a364df0ced8cfff7',//第三方用户唯一标识,必填
+            accountId :'Master',//第三方用户唯一标识,必填
             token:$('#token').val()?$('#token').val():'vhall',//token必填
           });  
       }
