--- a/wechat/src/main/webapp/demo/hudongZc.html
+++ b/wechat/src/main/webapp/demo/hudongZc.html
@@ -147,8 +147,8 @@
 
     <div class="inputs">
       <input id="appId" type="text" name="appId" value="fbc17706" placeholder="这里填写appId">
-      <input id="inavId" type="text" name="inavId" value="inav_c7275f5a" placeholder="这里填写互动房间ID">
-      <input id="token" type="text" name="token" value="access:fbc17706:d6cb9d92b6f5e65a" placeholder="token">
+      <input id="inavId" type="text" name="inavId" value="inav_7cbece55" placeholder="这里填写互动房间ID">
+      <input id="token" type="text" name="token" value="access:fbc17706:8facecd00cebc2e7" placeholder="token">
       <input onclick="init()" type="button"  value="开始互动">
     </div>
     <div id="my-interaction" style="margin: 0 auto;border: 1px solid #d2d2d2;margin-top:20px;"></div>
@@ -263,7 +263,7 @@
 
           if(window.location.href.indexOf('vhallyun.com') == -1){
             $('#appId').val('fbc17706');
-            $('#inavId').val('inav_c7275f5a');
+            $('#inavId').val('inav_7cbece55');
           }
 
       }
