--- a/wechat/src/main/webapp/demo/guest.html
+++ b/wechat/src/main/webapp/demo/guest.html
@@ -147,8 +147,8 @@
   <body>
     <h1 id="user-id" style="margin: 0 auto;margin-top: 30px;text-align: center;"></h1>
     <div class="inputs">
-      <input id="appId" type="text" name="appId" value="0cf4bbe0">
-      <input id="inavId" type="text" name="inavId" value="inav_b28b7f99">
+      <input id="appId" type="text" name="appId" value="fbc17706">
+      <input id="inavId" type="text" name="inavId" value="inav_7cbece55">
       <input onclick="init()" type="button"  value="开始互动">
     </div>
     <div id="my-interaction" style="width: 853px;height: 480px;margin: 0 auto;border: 1px solid #d2d2d2;margin-top:20px;"></div>
@@ -253,8 +253,8 @@
       window.onload = function () {
           document.getElementById('user-id').innerText = user.userName + '(' + user.userId + ')';
           if(window.location.href.indexOf('vhallyun.com') == -1){
-            $('#appId').val('277ed4af');
-            $('#inavId').val('inav_ce045de2');
+            $('#appId').val('fbc17706');
+            $('#inavId').val('inav_7cbece55');
           }
       }
 
@@ -319,13 +319,11 @@
           Vhall.config({
             appId : $('#appId').val(),//应用 ID ,必填
             accountId :user.userId,//第三方用户唯一标识,必填
-            token:'vhall',//token必填
+            token:'access:fbc17706:8facecd00cebc2e7',//token必填
           }); 
-
       }
 
       function muteAudio(obj){
-
         window.interaction.muteAudio();
         console.info(window.interaction.isAudioMuted());
         if(window.interaction.isAudioMuted()){
@@ -333,7 +331,6 @@
         }else{
           obj.value = '关闭声音';
         }
-        
       }
 
       function muteVideo(obj){
