--- a/wechat/src/main/webapp/xcview/html/live_class.html
+++ b/wechat/src/main/webapp/xcview/html/live_class.html
@@ -159,9 +159,9 @@
 			</div>     
 		</div>
 		<!-- 隐藏点击收起 -->
-		<div class="btn1" style="display: none !important;">
+		<!-- <div class="btn1" style="display: none !important;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 	<!--评价-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
