--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -97,7 +97,7 @@
 		<ul>
 			<li><span>提交申请后，我们会以短信形式告知审核结果；</span></li>
 			<li><span>申请成功后，医师可在预约时间前10分钟开始视频诊疗，请等待医师发起视频；</span></li>
-			<li><span>诊疗结束后，可前往<span style="color: #00bc12;">我的预约</span>页面观看诊疗历史视频</span></li>
+			<li><span>诊疗结束后，可前往<span style="color: #00bc12;" onclick="location.href ='/xcview/html/my_reservation.html'">我的预约</span>页面观看诊疗历史视频</span></li>
 		</ul>
 	</div>
 	<!-- 中间内容结束 -->
