--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 
-	<div class="my_order" onclick="location.href ='my_bookings.html'">
+	<div class="my_order" onclick="location.href ='my_reservation.html'">
 		<div class="anchor_main">
 			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
 			我的预约
