--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -430,6 +430,10 @@
 	.pic_img_one{
 		max-width: 0.45rem !important;
 	}
+
+	.course_nav_span{
+		margin-bottom: 0.1rem !important;
+	}
 </style>
 
 </head>
@@ -656,14 +660,15 @@
 				{{else if item.type == 5}}
 				<!-- 课程-->
 				<div class="course_hide" data-id="{{item.courseId}}" data-status="{{item.courseStatus}}" data-teaching="{{item.teaching}}" style="padding-bottom: 0;margin-top: 0;">
-					<div class="course_nav_span comment_hide" style="font-size: 0.3rem;color: #333333;">
+					<div class="course_nav_span comment_hide show-text" style="font-size: 0.3rem;color: #333333;">
 						{{if item.stick}}
 						<span class="stick_img_stick"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
 						{{item.content}}
 
-						<div class="both"></div>
+						
 					</div>
+					<div class="both"></div>
 					<div class="both"></div>
 					<div class="course_nav_cen comment_hide">
 						<img src="{{item.smallImgPath}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
