视频专辑直播换了个JQ文件

--- a/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -17,8 +17,8 @@
 		<link rel="stylesheet" href="/web/css/componet.css" />
 		<link rel="stylesheet" href="/web/font/iconfont.css">
 		<link rel="stylesheet" type="text/css" href="/web/css/liveVideo.css?v=ipandatcm_1.3" />
-		
-		<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="/web/js/jquery-1.12.1.js"></script>
+		<!--<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>-->
 		<style type="text/css">
 			.show-bg{
 				width: 13px;
