--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1222,7 +1222,7 @@
 	            <div class="disciple_main_id">
 	            	<script type="text/html" id="disciple_main_id">
 					{{each items as item i}} 
-						<img src="{{item}}" alt="" class="disciple_main_apprentices" />
+						<img src="{{item}}?imageMogr2/thumbnail/!80x80r|imageMogr2/gravity/Center/crop/80x80" alt="" class="disciple_main_apprentices" />
 					{{/each}}
 		            </script>
 	            </div>
