--- a/wechat/src/main/webapp/xcview/html/broadcast_protocol.html
+++ b/wechat/src/main/webapp/xcview/html/broadcast_protocol.html
@@ -32,6 +32,50 @@
 	}	
 </script>
 <style>
+	*{
+		margin: 0 auto;
+	}
+	.header {
+	    width: 7.5rem;
+	    height: 0.88rem;
+	    margin: 0 auto;
+	    background: #fff;
+	    margin: 0 auto;
+	    position: fixed;
+	    top: 0;
+	    left: 50%;
+	    margin-left: -3.75rem;
+	}
+	.headers {
+	    width: 7.5rem;
+	    height: 0.88rem;
+	    text-align: center;
+	    line-height: 0.88rem;
+	    overflow: hidden;
+	    position: fixed;
+	    border-bottom: 1px solid #D8DDE6;
+	    background: white;
+	    z-index: 999999;
+	}
+	.header_title {
+	    font-size: 0.36rem;
+	    color: #333333;
+	    text-align: center;
+	    line-height: 0.88rem;
+	}
+	.header_return {
+	    width: 0.24rem;
+	    height: 0.42rem;
+	    position: absolute;
+	    left: 0.26rem;
+	    top: 0.23rem;
+	    z-index: 999999;
+	}
+	.header_return img {
+	    width: 100%;
+	    height: 100%;
+	    display: block;
+	}
 	.both{
 		clear: both;
 	}
