--- a/wechat/src/main/webapp/xcview/html/my_reservation.html
+++ b/wechat/src/main/webapp/xcview/html/my_reservation.html
@@ -37,10 +37,12 @@
 	}	
 </script>
 <style>
-
+	body{
+		background:#f0f0f0;
+	}
 </style>
 </head>
-<body style="background:#f0f0f0;">
+<body style="">
 	<!-- 头部开始 -->
 	<header>
 		<div class="header">
