--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2752,7 +2752,7 @@
 					<div class="name">
 						<span><em>*</em>昵称</span>
 						<input type="text" placeholder="请填写您的昵称" maxlength="20" class="put0" id="u_nickname">
-						<p class="warning warning_anchor_name hide">昵称不能为空</p>
+						<p class="warning warning_anchor_name hide" style="margin-left: 109px;">昵称不能为空</p>
 					</div>
 					<div class="name">
 						<span><em>*</em>真实头像</span>
@@ -2768,7 +2768,7 @@
 								<input type="file"  id="profilePhotoImgPath" accept="image/gif,image/jpeg,image/jpg,image/png" />
 							</div>
 						</div>
-						<div class="name_hint" style="margin-top: 27px;">
+						<div class="name_hint" style="margin-top: 13px;">
 							推荐使用尺寸120x120<br />
 							请上传清晰头像<br />
 							文件小于2M<br />
