--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1005,7 +1005,7 @@
 						</div>
 						<!--远程诊疗列表-->
 						<div class="long-range-table">
-
+							<p class="long-range-tip">诊疗直播步骤：1.下载<span>熊猫中医APP</span>；2.进入我的-远程诊疗进行直播</p>
 							<table id="long-range-list">
 								<script type="text/template" id="long-range-template">						
 								<tr>
@@ -1248,7 +1248,7 @@
 								<div class="see-disciple-scroll">
 									<span class="see-disciple-left z">预约人</span>
 									<div class="see-disciple-right z">
-										<span class="appointment-name" style="color: #188EEE;"></span>
+										<span class="appointment-name" style="color: #188EEE;cursor: pointer;"></span>
 									</div>
 								</div>
 								<!--预留电话-->
