我的预约，添加信息段。预约，点击提交按钮。。列表添加，分页参数

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -112,11 +112,15 @@
 	</div>
 
 	<div class="my_order" onclick="location.href ='my_reservation.html'">
-		<div class="anchor_main">
+		<div class="anchor_main" style="float: left;width: 5.8rem;margin-left: 0.26rem;">
 			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
 			我的预约
-			<img src="../images/account05.png" class="img1 y" />
+
+			
 		</div>
+		<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;" />
+		<span class="number_span" style="padding: 0.1rem 0.2rem;margin-top: 0.25rem;background: #ff4012;border-radius: 100px;float: right;margin-right: 0.26rem;display:none;">0</span>
+		
 	</div>
 	
 	<!--我的消息-->
