医师端--远程诊疗联调

--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -28,13 +28,7 @@
 	}	
 </script>
 <style>
-	.my_order{
-		width: 7.5rem;
-	    height: 0.98rem;
-	    background: #fff;
-	    margin: 0 auto;
-	    margin-top: 0.2rem;
-	}
+
 </style>
 </head>
 <!--公用-->
@@ -103,7 +97,7 @@
 		</div>
 	</div>-->
 	<!--去下载页面-->
-	<div class="my_anchor">
+	<div class="my_anchor" style="margin-bottom: 0.2rem;">
 		<div class="anchor_main">
 			<img src="../images/my_anchor.png" class="img0 z" />
 			我要当主播
@@ -111,7 +105,16 @@
 		</div>
 	</div>
 
-	<div class="my_order" onclick="location.href ='my_reservation.html'">
+	<div class="treatment" onclick="location.href ='treatment.html'" style="margin-top: 0;">
+		<div class="treatment_main" style="float: left;margin-left: 0.26rem;">
+			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
+			远程诊疗
+		</div>
+		<img src="../images/account05.png" class="img1 y" />
+		<span class="treatment_number_span">0</span>
+		
+	</div>
+	<div class="my_order" onclick="location.href ='my_reservation.html'" style="margin-top: 0;">
 		<div class="anchor_main" style="float: left;width: 5.8rem;margin-left: 0.26rem;">
 			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
 			我的预约
